css/style.css
/* Base Styles
–––––––––––––––––––––––––––––––––––––––––––––––––– */

html {
	font-size: 62.5%;
	height: 100%;
}

body {
	font-size: 1.5em;
	line-height: 1.6;
	font-weight: 400;
	font-family: "Lato", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
	color: #222;
	height: 100%;
	width: 100%;
}

.fa-bars {
	color: white;
}

/* Nav
------------------ */

.cusecNav {
	font-size: 18px;
	text-align: center;
	margin-top: 30px;
	margin-bottom: 30px;
	font-weight: 300;
	display: block;
}

.cusecNav a {
	color: white;
}

/* This would be cool. Add nice CSS3 color transition */

.cusecNav a:hover {
	color: white;
}

.cusecNav p {
	display: inline-block;
	vertical-align: middle;
}

.mobileLogo {
	display: block!important;
	padding-bottom: 10px;
}

.btn-cusec{
	background: #01e792;
	background-image: linear-gradient(228deg, #01e792, #73ccff);
	color: white;
}

.btn-cusec:hover{
	background: #01cd85;
	color: white !important;
}

/* Schedule */
.schedule a {
  color: #5D4056;
}

.schedule table {
  margin-left:auto;
  margin-right:auto;
  width: 100%;
  border-collapse: collapse;
}

.schedule td, th {
  width: 250px;
  text-align: center;
}

.schedule tr {
  vertical-align: center;
  line-height: 40px;
}

.time {
  font-weight: bold;
}

.talk {
  background-color: #01e792;
}

.event {
  background-color: #F0F0F2;
}

#thursday {
  display: none;
}

#friday {
  display: none;
}

#saturday {
  display: none;
}

@media screen and (max-width: 480px) {
  #sched {
    display: none;
  }

  #thursday {
    display: block;
  }

  #friday {
    display: block;
  }

  #saturday {
    display: block;
  }
}


/* Base Divs
–––––––––––––––––––––––––––––––––––––––––––––––––– */

hr{
	border-top: 1px solid #73ccff !important;
}

#schedule hr{
	margin:0;
}

#main {
	background: linear-gradient(228deg, #01e792, #73ccff);
	background-size: cover;
	background-attachment: fixed;
	min-height: 100%;
	box-shadow: 2px 2px 5px 0 gray;
	color: white;
	display: table;
	table-layout: fixed;
	width: 100%;
	overflow: hidden;
	position: relative;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background: cover;
}

#aboutMain {
	background: linear-gradient(228deg, #01e792, #73ccff);
	min-height: 15%;
	box-shadow: 2px 2px 5px 0 grey;
	color: white;
	display: table;
	table-layout: fixed;
	width: 100%;
	overflow: hidden;
	position: relative;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background: cover;
}

.cusecSplash {
	margin-top: 5%;
}
/*About section */

#about {
	background: white;
	box-shadow: 2px 2px 5px 0 grey;
	color: black;
	height: 100%;
	display: table;
	table-layout: fixed;
	width: 100%;
	overflow: hidden;
	position: relative;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background: cover;
}

#about h1 {
	font-size: 50px;
	padding-bottom: 50px;
}

#venue {
	background-size: cover;
	background-attachment: fixed;
	min-height: 50%;
	background: url(../img/bgMap.png);
	padding: 2% 0;
	color: black;
}

#venue h1 {
	font-size: 50px;
	font-weight: 400;
	padding-bottom: 10px;
}

#venue p {
	font-size: 24px;
}

#venue h3,
h4 {
	color: black;
}

#speakers {
	background: url(../img/diamond.png) repeat;
	box-shadow: 0px -2px 5px 0 gray;
	padding: 2% 0;
}

#speakers h1 {
	font-size: 50px;
	font-weight: 400;
	padding-bottom: 30px;
}

#sponsors h2 {
	border-bottom: 1px solid gold;
}

#speakers h3 {
	font-size: 24px;
	border-color: aqua;
}

#speakers p {
	font-size: 16px;
}

.bot-left {
	position: relative;
}

.bot-left:before,
.bot-left:after {
	content: "";
	position: absolute;
	left: 15px;
	top: 80px;
}

.bot-left:before {
	width: 2px;
	background-image: -webkit-gradient(linear, 0 100%, 0 0, from(#01e792), to(#73ccff));
	background-image: -webkit-linear-gradient(#01e792, #73ccff);
	background-image: -moz-linear-gradient(#01e792, #73ccff);
	background-image: -o-linear-gradient(#01e792, #73ccff);
}

.bot-left:after {
	right: -2px;
	height: 2px;
	background-image: -webkit-gradient(linear, 0 0, 100% 0, from(#01e792), to(#73ccff));
	background-image: -webkit-linear-gradient(left, #01e792, #73ccff);
	background-image: -moz-linear-gradient(left, #01e792, #73ccff);
	background-image: -o-linear-gradient(left, #01e792, #73ccff);
}

.bot-right {
	position: relative;
}

.bot-right:before,
.bot-right:after {
	content: "";
	position: absolute;
	left: 15px;
	top: 80px
}

.bot-right:before {
	width: 2px;
	background-image: -webkit-gradient(linear, 0 100%, 0 0, from(#01e792), to(#73ccff));
	background-image: -webkit-linear-gradient(#01e792, #73ccff);
	background-image: -moz-linear-gradient(#01e792, #73ccff);
	background-image: -o-linear-gradient(#01e792, #73ccff);
}

.bot-right:after {
	right: -2px;
	height: 2px;
	background-image: -webkit-gradient(linear, 0 0, 100% 0, from(#01e792), to(#73ccff));
	background-image: -webkit-linear-gradient(left, #01e792, #73ccff);
	background-image: -moz-linear-gradient(left, #01e792, #73ccff);
	background-image: -o-linear-gradient(left, #01e792, #73ccff);
}

#section {
	box-shadow: 0px -2px 5px 0 gray;
	padding-top: 2%;
	padding-bottom: 2%;
	background: ghostwhite;
	display: table;
	table-layout: fixed;
	height: 100%;
	width: 100%;
	overflow: hidden;
	position: relative;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background: cover;
}

#section h1 {
	font-size: 50px;
	font-weight: 400;
	padding-bottom: 50px;

}

#section h2 {
	font-size: 20px;
	font-weight: 400;
}

#section p {
	font-weight: 300;
}

#sponsors {
	box-shadow: 0px -2px 5px 0 gray;
	padding: 2% 0;
	background: ghostwhite;
	display: table;
	table-layout: fixed;
	width: 100%;
	overflow: hidden;
	position: relative;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background: cover;
}

#sponsors h1 {
	font-size: 50px;
	font-weight: 400;
	padding-bottom: 10px;
}

#sponsors h2 {
	font-size: 20px;
	font-weight: 300;
	border-bottom: 2px solid #efe2bd
}

#coc {
	box-shadow: 0px -2px 5px 0 gray;
	padding: 10% 0;
	background: ghostwhite;
	display: table;
	table-layout: fixed;
	width: 100%;
	overflow: hidden;
	position: relative;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background: cover;
}

#coc h1 {
	font-size: 3em;
}

#coc p {
	font-size: 18px;
	line-height: 1.7
}

#coc hr {
	border-top: 1px solid #000;
}


@media (max-width: 420px) {
	.cusecNav {
		padding-left: 0px;
		margin-top: 20px;
		padding-bottom: 10px;
	}
	.cusecNav p {
		margin: 0;
		font-weight: 300;
		font-size: 12px;
		text-align: center;
	}
	.cusecSplash{
		margin-top: 0px;
	}
	.cusecSplash h2 {
		font-size: 20px;
	}
	.cusecSplash h1 {
		font-size: 18px;
	}
	.mobileLogo {
		display: block!important;
	}
	.logo {
		display: none!important;
	}
	#section h1{
		font-size: 30px;
		padding-bottom: 30px;
		text-align: center;
	}
	#section h2{
		text-align: center;
	}
	#section p{
		text-align: center;
	}
	.bot-left:after{
		height: 2px;
		top: 60px;
	}
	#venue h1{
		font-size: 30px;
		padding-bottom: 10px;
	}
	#venue h3{
		font-size: 20px;
	}
	#speakers h1{
		font-size: 30px;
		padding-bottom: 30px;
	}
	#sponsors h1{
		font-size: 30px;
		padding-bottom: 10px;
	}
}

@media (min-width: 762px) and (max-width: 992px){
	.cusecNav {
		padding-left: 0px;
		margin-top: 30px;
		padding-bottom: 10px;
	}
	.cusecNav p {
		font-weight: 300;
		font-size: 18px;
		text-align: center;
	}
	.cusecSplash{
		margin-top: 50px;
	}
	.cusecSplash h2 {
		font-size: 30px;
	}
	.cusecSplash h1 {
		font-size: 35px;
	}
	.mobileLogo {
		display: block!important;
	}
	.logo {
		display: none!important;
	}
	#section h2{
		text-align: center;
	}
	#section p{
		font-size: 18px;
		text-align: center;
	}
	#venue h3{
		font-size: 24px;
	}
}

#contact {
	background: linear-gradient(228deg, #01e792, #73ccff);
	z-index: -1;
	background-size: cover;
	background-attachment: fixed;
	min-height: 50%;
	padding: 25% 5%;
	color: white;
}

#footer {
	background: black;
	color: white;
	padding: 1%;
	line-height: 0.1;
}

#footer p {
	font-weight: 300;
	color: dimgrey;
}

.down {
	margin-top: 10%;
}

@media (min-width: 992px){
	.mobileLogo {
		display: none!important;
	}
	.logo {
		display: block!important;
	}
}

/* Media Queries
–––––––––––––––––––––––––––––––––––––––––––––––––– */

@media (min-width: 320px){
	#coc {
		height: 480%;
		padding: 7% 7%;
	}
	#coc h1 {
		font-size: 2.1em;
	}
	#coc h2 {
		font-size: 1.4em;
	}
	#coc p {
		font-size: 1em;
	}
}

@media (min-width: 768px) {}

.buttonGroup {
	padding-top: 15px;
}

#aboutNav {
	background: linear-gradient(228deg, #01e792, #73ccff);
	z-index: -1;
	background-size: cover;
	background-attachment: fixed;
	min-height: 100%;
	padding-top: 150px;
	box-shadow: 2px 2px 5px 0 gray;
	color: white;
}


.viewAllButton {
	color: black;
	background-color: rgba(255, 255, 255, 0.0);
	border-color: #000;
	margin: 20px 0 20px 0;
	border: 1px solid black !important;
}

.viewAllButton:focus,
.viewAllButton.focus {
	color: #fff;
	background-color: rgba(255, 255, 255, 0.3);
	border-color: #fff;
}

.viewAllButton:hover {
	color: #333;
	background-color: rgba(255, 255, 255, 0.2);
}

.aboutSection {
	background-image: url(../img/cusecPeople.jpg);
}

#topFooter {
	background: url(../img/simple_dashed.png) repeat;
	padding: 2% 0;
}

